--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,22 @@ header span{
   font-weight: 500;
 }
 
+input#searchCard{
+  padding: 1em;
+  width: 300px;
+  background: rgba(0,0,0,0.3);
+  border: none;
+  font-size: 10pt;
+ color: #262626;
+  border-radius: 5px;
+  transition: background 1s ease;
+}
+
+input#searchCard:hover, input#searchCard:focus, input#searchCard:active{
+    outline:none;
+    background: #ffffff;
+  }
+
 trello-board {
   display: grid;
   grid-gap: 30px;
