--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
+  font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
   font-weight: 300;
-  font-family: Helvetica Neue,Arial,Helvetica,sans-serif;
   margin: 0;
 }
 
@@ -9,38 +9,40 @@ header {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  padding: 1em;
   background: #17394d;
+  padding: 1em;
 }
 
 header h1 {
+  color: white;
   font-weight: 400;
   margin: 0;
-  color: white;
 }
 
-header span{
+header span {
   cursor: pointer;
-  color:white;
+  color: white;
   font-size: 1em;
   font-weight: 500;
 }
 
-input#searchCard{
-  padding: 1em;
-  width: 300px;
-  background: rgba(0,0,0,0.3);
-  border: none;
-  font-size: 10pt;
- color: #262626;
+input#searchCard {
+  background: rgba(0, 0, 0, 0.3);
   border-radius: 5px;
+  border: none;
+  width: 300px;
+  padding: 1em;
+  color: #262626;
+  font-size: 10pt;
   transition: background 1s ease;
 }
 
-input#searchCard:hover, input#searchCard:focus, input#searchCard:active{
-    outline:none;
-    background: #ffffff;
-  }
+input#searchCard:hover,
+input#searchCard:focus,
+input#searchCard:active {
+  background: #ffffff;
+  outline: none;
+}
 
 trello-board {
   display: grid;
